--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </li>
           <li><a class="header_desktop" href="./start.html">GET STARTED</a></li>
           <li><a class="header_desktop" href="./learn.html">LEARN MORE</a></li>
-          <li class="header_mobile_menu">
+          <li class="header_mobile_menu" data-open>
             <span class="header_svg"
               ><img
                 src="./icon/list.svg"
@@ -377,9 +377,88 @@
                   grow their business!
                 </p></span
               >
-              <ul>
-                <li></li>
+              <ul class="resource_sentence_box">
+                <li class="resource_sentence">
+                  <span class="resource_sentence_box_img"
+                    ><img
+                      class="resource_sentence_img"
+                      src="./icon/keyboard.svg"
+                      alt=""
+                  /></span>
+                  <span class="resource_sentence_box_title"
+                    ><p class="resource_sentence_title">30 Second Assessment</p>
+                    <p>
+                      Take this assessment so we can better understand your
+                      goals.
+                    </p>
+                    <a class="resource_sentence_link" href="#"
+                      >Learn More >></a
+                    ></span
+                  >
+                </li>
+                <li class="resource_sentence">
+                  <span class="resource_sentence_box_img"
+                    ><img
+                      class="resource_sentence_img"
+                      src="./icon/people.svg"
+                      alt=""
+                  /></span>
+                  <span class="resource_sentence_box_title"
+                    ><p class="resource_sentence_title">Changing Firms</p>
+                    <p>
+                      The National Realty Guild difference is due to our
+                      dedication to your growth.
+                    </p>
+                    <a class="resource_sentence_link" href="#"
+                      >Learn More >></a
+                    ></span
+                  >
+                </li>
+                <li class="resource_sentence">
+                  <span class="resource_sentence_box_img"
+                    ><img
+                      class="resource_sentence_img"
+                      src="./icon/fire.svg"
+                      alt=""
+                  /></span>
+                  <span class="resource_sentence_box_title"
+                    ><p class="resource_sentence_title">Free Training Tips</p>
+                    <p>
+                      TIPS- Get free training and a sneak-peak of NRG-Universe.
+                    </p>
+                    <a class="resource_sentence_link" href="#"
+                      >Learn More >></a
+                    ></span
+                  >
+                </li>
               </ul>
+              <div class="resource_sentence_final">
+                <span class="resource_sentence_box_img_final"
+                  ><img
+                    class="resource_sentence_img_final"
+                    src="./icon/broker.svg"
+                    alt=""
+                /></span>
+                <span class="resource_sentence_box_title_final"
+                  ><p class="resource_sentence_title_final">Randy Burg</p>
+                  <p class="resource_sentence_supptitle_final">
+                    National Realty Guild| Designated Broker
+                  </p>
+                  <p class="resource_sentence_text_final">
+                    <span class="resource_sentence_supptext_final">"</span>Our
+                    commission structure is unique but it’s a strategy based on
+                    pure compassion for the agents of National Realty Guild. Our
+                    real estate agents reap so many benefits from getting 100%
+                    commission. Growing National Realty Guild means much more
+                    than just increasing our number of transactions, it means
+                    giving our agents the opportunity and tools they need to
+                    establish and grow their own business<span
+                      class="resource_sentence_supptext_final"
+                      >"</span
+                    >
+                  </p></span
+                >
+              </div>
             </div>
           </div>
         </div>
@@ -580,5 +659,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/toggleModal.js"></script>
   </body>
 </html>
