--- a/start.html
+++ b/start.html
@@ -82,7 +82,7 @@
           </li>
           <li><a class="header_desktop" href="./start.html">GET STARTED</a></li>
           <li><a class="header_desktop" href="./learn.html">LEARN MORE</a></li>
-          <li class="header_mobile_menu">
+          <li class="header_mobile_menu" data-open>
             <span class="header_svg"
               ><img
                 src="./icon/list.svg"
@@ -289,5 +289,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/toggleModal.js"></script>
   </body>
 </html>
