--- a/start.html
+++ b/start.html
@@ -20,10 +20,80 @@
     <link href="./css/normalize.css" rel="stylesheet" />
     <link href="./css/header.css" rel="stylesheet" />
     <link href="./css/footer.css" rel="stylesheet" />
+    <link href="./css/start.css" rel="stylesheet" />
     <title>National Reality Guild</title>
   </head>
-  <body class="body">
-    <header class="header">
+  <body class="body" data-body-hidden>
+    <div class="modal" data-modal-menu>
+      <div class="modal_padding">
+        <span class="modal_button"
+          ><span class="modal_img_content" data-close
+            ><img src="./icon/exit.svg" alt="" class="modal_img" /></span
+        ></span>
+        <span class="modal_title">USEFUL LINKS</span>
+        <nav>
+          <ul>
+            <li class="modal_sentence_list">
+              <a href="./index.html" class="modal_sentence_link"
+                ><span class="modal_svg"
+                  ><img src="./icon/arrow.svg" alt="Mobile menu" class="img"
+                /></span>
+                <p>Home</p></a
+              >
+            </li>
+            <li class="modal_sentence_list">
+              <a href="./benefits.html" class="modal_sentence_link"
+                ><span class="modal_svg"
+                  ><img src="./icon/arrow.svg" alt="Mobile menu" class="img"
+                /></span>
+                <p>Benefits</p></a
+              >
+            </li>
+            <li class="modal_sentence_list">
+              <a href="./sales.html" class="modal_sentence_link"
+                ><span class="modal_svg"
+                  ><img src="./icon/arrow.svg" alt="Mobile menu" class="img"
+                /></span>
+                <p>Sales Growth</p></a
+              >
+            </li>
+            <li class="modal_sentence_list">
+              <a href="./support.html" class="modal_sentence_link"
+                ><span class="modal_svg"
+                  ><img src="./icon/arrow.svg" alt="Mobile menu" class="img"
+                /></span>
+                <p>Support</p></a
+              >
+            </li>
+            <li class="modal_sentence_list">
+              <a href="./location.html" class="modal_sentence_link"
+                ><span class="modal_svg"
+                  ><img src="./icon/arrow.svg" alt="Mobile menu" class="img"
+                /></span>
+                <p>Locations</p></a
+              >
+            </li>
+            <li class="modal_sentence_list">
+              <a href="./start.html" class="modal_sentence_link"
+                ><span class="modal_svg"
+                  ><img src="./icon/arrow.svg" alt="Mobile menu" class="img"
+                /></span>
+                <p>Get Started</p></a
+              >
+            </li>
+            <li class="modal_sentence_list">
+              <a href="./learn.html" class="modal_sentence_link"
+                ><span class="modal_svg"
+                  ><img src="./icon/arrow.svg" alt="Mobile menu" class="img"
+                /></span>
+                <p>Learn More</p></a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <header class="header" id="below-arrow">
       <div class="header_social_background">
         <ul class="header_social container">
           <li class="header_social_sentence">
@@ -93,7 +163,94 @@
         </ul>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <div class="container">
+          <div class="start_padding">
+            <p class="resource_sentence_text_final">
+              <span class="resource_sentence_supptext_final">"</span>Taking this
+              assessment helps agents see angles of their business and
+              blind-spots that may be hiding from plain site. Without any
+              obligation to you, we will follow up with you and tell you exactly
+              how you can capitalize on your current situation.<span
+                class="resource_sentence_supptext_final"
+                >"</span
+              >
+            </p>
+            <p class="start_supptext">
+              Every time we get this opportunity, it turns into a very positive
+              experience. As you learn how to make your business more efficient
+              and what opportunities may be available to you.
+            </p>
+            <h2 class="hero_title">BROKER ASSESSMENT</h2>
+            <form>
+              <label
+                ><input
+                  value
+                  type="text"
+                  name="your-name"
+                  aria-required="true"
+                  aria-invalid="false"
+                  placeholder="Name*" /></label
+              ><label
+                ><input
+                  value
+                  type="email"
+                  name="your-email"
+                  aria-required="true"
+                  aria-invalid="false"
+                  placeholder="Email*"
+              /></label>
+              <label
+                ><input
+                  value
+                  type="tel"
+                  name="your-tel"
+                  aria-invalid="false"
+                  placeholder="Phone"
+              /></label>
+              <p>What type of Real Estate License do you currently have?</p>
+              <label
+                ><input
+                  value="Real Estate License"
+                  type="checkbox"
+                  name="your-type-of-license[]"
+                /><span>Real Estate License</span></label
+              ><label
+                ><input
+                  value="Real Estate Broker"
+                  type="checkbox"
+                  name="your-type-of-license[]"
+                /><span>Real Estate Broker</span></label
+              ><label
+                ><input
+                  value="Getting Broker License Soon"
+                  type="checkbox"
+                  name="your-type-of-license[]"
+                /><span>Getting Broker License Soon</span></label
+              ><label
+                ><input
+                  value
+                  size="40"
+                  type="tel"
+                  name="your-licensed-year"
+                  aria-invalid="false"
+                  placeholder="How many years have you been licensed?"
+              /></label>
+              <p>
+                Are you a full-time or part-time REALTOR? (check any that apply)
+              </p>
+              <select name="your-full-part-time" aria-invalid="false">
+                <option value>Select</option>
+                <option value="Full-time">Full-time</option>
+                <option value="Part-time">Part-time</option>
+              </select>
+              <p>What's your passion? Why did you get licensed?</p>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer class="footer">
       <div class="container">
         <ul class="footer_container">
@@ -289,6 +446,15 @@
         </div>
       </div>
     </footer>
+    <div class="container">
+      <a href="#below-arrow" class="below_flex">
+        <div class="below_box">
+          <span class="below_background"
+            ><img src="./icon/arrow.svg" alt="" class="below_img"
+          /></span>
+        </div>
+      </a>
+    </div>
     <script src="./js/toggleModal.js"></script>
   </body>
 </html>
