--- a/index.html
+++ b/index.html
@@ -16,12 +16,20 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="icon"
+      href="favicon/favicon-16x16.png"
+      type="favicon/png"
+      sizes="16x16"
+    />
     <link href="./css/global.css" rel="stylesheet" />
     <link href="./css/normalize.css" rel="stylesheet" />
     <link href="./css/header.css" rel="stylesheet" />
     <link href="./css/footer.css" rel="stylesheet" />
     <link href="./css/index.css" rel="stylesheet" />
-    <title>National Reality Guild</title>
+    <title>
+      National Realty Guild - The Leading Real Estate Team In Minneapolis
+    </title>
   </head>
   <body class="body" data-body-hidden>
     <div class="modal" data-modal-menu>
@@ -174,40 +182,54 @@
                 alt="National Reatity Guild Logo"
                 class="hero_svg"
             /></span>
-            <div class="hero_content">
-              <h2 class="hero_title">Welcome to National Realty Guild</h2>
-              <span class="hero_text_box"
-                ><p class="hero_text">
-                  We took a whole new approach to this business and it’s proven
-                  to be a success! The difference with
-                  <span class="hero_text_accent">NRG</span> is that our business
-                  model was designed to help agents grow their business, through
-                  dedicated training and support, and by providing a unique
-                  commission structure that allows agents to keep more of their
-                  earned commissions. National Guild Realty has over 6 office
-                  locations in the Twin Cities area and over 150 agents.
-                </p>
-                <p class="hero_text">
-                  From our valuable training sessions, to our lead generation
-                  tools, to our true 100% commission program, there just isn’t a
-                  lot of brokers that operate the way we do!
-                </p></span
-              >
-              <button type="button" class="hero_button">
-                NRG AGENT BENEFITS
-              </button>
-              <button type="button" class="hero_button">OUR SUPPORT</button>
-            </div>
-            <div>
-              <iframe
-                class="hero_video"
-                autoplay="1"
-                src="https://www.youtube.com/embed/_7wV9CNt8pk"
-                title="Join National Realty Guild 100% video"
-                frameborder="0"
-                allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
+            <div class="hero_desktop">
+              <div class="hero_content">
+                <h2 class="hero_title">Welcome to National Realty Guild</h2>
+                <span class="hero_text_box"
+                  ><p class="hero_text">
+                    We took a whole new approach to this business and it’s
+                    proven to be a success! The difference with
+                    <span class="hero_text_accent">NRG</span> is that our
+                    business model was designed to help agents grow their
+                    business, through dedicated training and support, and by
+                    providing a unique commission structure that allows agents
+                    to keep more of their earned commissions. National Guild
+                    Realty has over 6 office locations in the Twin Cities area
+                    and over 150 agents.
+                  </p>
+                  <p class="hero_text">
+                    From our valuable training sessions, to our lead generation
+                    tools, to our true 100% commission program, there just isn’t
+                    a lot of brokers that operate the way we do!
+                  </p></span
+                >
+                <span class="hero_button_box_tab"
+                  ><button type="button" class="hero_button">
+                    NRG AGENT BENEFITS
+                  </button>
+                  <button type="button" class="hero_button_support">
+                    OUR SUPPORT
+                  </button></span
+                >
+              </div>
+              <div class="video_desktop">
+                <iframe
+                  class="video hero_video"
+                  src="https://www.youtube.com/embed/_7wV9CNt8pk?autoplay=1"
+                  title="Join National Realty Guild 100% video"
+                  frameborder="0"
+                  allow="accelerometer; autoplay *; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+                <span class="hero_button_desktop"
+                  ><button type="button" class="hero_button">
+                    NRG AGENT BENEFITS
+                  </button>
+                  <button type="button" class="hero_button_support">
+                    OUR SUPPORT
+                  </button></span
+                >
+              </div>
             </div>
           </div>
         </div>
@@ -218,6 +240,9 @@
             <ul class="about_content">
               <li class="about_sentence">
                 <a href="#"><p class="about_title">ABOUT NRG</p></a>
+              </li>
+              <li class="about_sentence">
+                <a href="#"><p class="about_title">BENEFITS</p></a>
               </li>
               <li class="about_sentence">
                 <a href="#"><p class="about_title">SUPPORTS</p></a>
