--- a/learn.html
+++ b/learn.html
@@ -16,10 +16,17 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="icon"
+      href="favicon/favicon-16x16.png"
+      type="favicon/png"
+      sizes="16x16"
+    />
     <link href="./css/global.css" rel="stylesheet" />
     <link href="./css/normalize.css" rel="stylesheet" />
     <link href="./css/header.css" rel="stylesheet" />
     <link href="./css/footer.css" rel="stylesheet" />
+    <link href="./css/learn.css" rel="stylesheet" />
     <title>National Reality Guild</title>
   </head>
   <body class="body" data-body-hidden>
@@ -162,7 +169,198 @@
         </ul>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <div class="container">
+          <div class="learn_padding">
+            <h3 class="learn_title">GET IN TOUCH</h3>
+            <p class="learn_supptitle">
+              We are always happy to help with any questions you have!
+            </p>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="learn_background">
+          <div class="container">
+            <div class="learn_drop_padding">
+              <span class="learn_drop_title"
+                ><span>DROP US A LINE</span
+                ><img
+                  src="./icon/arrow.svg"
+                  alt="National Reatity Guild Logo"
+                  class="learn_icon_svg"
+              /></span>
+              <p class="learn_supptitle_form">
+                If you have any questions, send us a message below and one of
+                our team members will get back to you. We look forward to
+                hearing from you!
+              </p>
+              <form
+                style="margin: 0 0 80px 0"
+                action="/web/20210923064659/http://www.joinnrg.com/contact-us/#wpcf7-f4-p107-o1"
+                method="post"
+                novalidate="novalidate"
+              >
+                <span class="learn_drop_input"
+                  ><input
+                    type="text"
+                    name="your-name"
+                    value=""
+                    size="40"
+                    style="
+                      padding: 10px;
+                      color: #dfb85d;
+                      font-weight: 800;
+                      width: 100%;
+                    "
+                    aria-required="true"
+                    aria-invalid="false"
+                    placeholder="Name*" /></span
+                ><span class="learn_drop_input"
+                  ><input
+                    type="email"
+                    name="your-email"
+                    value=""
+                    size="40"
+                    style="
+                      padding: 10px;
+                      color: #dfb85d;
+                      font-weight: 800;
+                      width: 100%;
+                    "
+                    aria-required="true"
+                    aria-invalid="false"
+                    placeholder="Email*" /></span
+                ><span class="learn_drop_input"
+                  ><input
+                    type="tel"
+                    name="your-phone"
+                    value=""
+                    size="40"
+                    style="
+                      padding: 10px;
+                      color: #dfb85d;
+                      font-weight: 800;
+                      width: 100%;
+                    "
+                    aria-invalid="false"
+                    placeholder="Phone" /></span
+                ><span class="learn_drop_input">
+                  <textarea
+                    name="your-message"
+                    cols="40"
+                    rows="4"
+                    style="
+                      padding: 10px;
+                      color: #dfb85d;
+                      font-weight: 800;
+                      width: 100%;
+                    "
+                    aria-required="true"
+                    aria-invalid="false"
+                    placeholder="Message*"
+                  ></textarea>
+                </span>
+                <p
+                  style="
+                    line-height: 1.5;
+                    color: rgb(255 255 255 / 70%);
+                    margin: 0 0 40px 0;
+                  "
+                >
+                  Please solve puzzle 5 ×
+                  <span class="learn_drop_input" style="margin: 0">
+                    <input
+                      type="text"
+                      name="wpcaptcha-478"
+                      value=""
+                      size="2"
+                      maxlength="2"
+                      style="
+                        padding: 10px;
+                        color: #dfb85d;
+                        font-weight: 800;
+                        width: 100%;
+                      "
+                      aria-required="true"
+                    />
+                  </span>
+                  <span>= 50</span>
+                </p>
+                <button class="learn_drop_button" type="submit">
+                  SEND MESSAGE
+                </button>
+              </form>
+              <sapn class="learn_drop_box"
+                ><img class="learn_drop_img" src="./img/drop.jpg" alt=""
+              /></sapn>
+              <span class="learn_drop_title"
+                ><span>CONTACT INFO</span
+                ><img
+                  src="./icon/arrow.svg"
+                  alt="National Reatity Guild Logo"
+                  class="learn_icon_svg"
+              /></span>
+              <ul class="learn_drop_list">
+                <li class="footer_list">
+                  <a href="#" class="learn_drop_list_icon">
+                    <span class="learn_drop_list_text"
+                      ><p>
+                        333 Washington Ave N Suite 300, Minneapolis MN 55401,
+                        USA
+                      </p>
+                    </span>
+                  </a>
+                </li>
+                <li class="footer_list">
+                  <a href="tel:(651) 330-8000" class="learn_drop_list_icon">
+                    <span class="learn_drop_list_text"
+                      ><p>
+                        (651) 330-8000
+                        <span class="learn_drop_list_supptext">9-5 CST</span>
+                      </p>
+                    </span>
+                  </a>
+                </li>
+                <li class="footer_list">
+                  <a
+                    href="mailto:admin@nrgadmin.com"
+                    class="learn_drop_list_icon"
+                  >
+                    <span class="learn_drop_list_text"
+                      ><p>admin@nrgadmin.com</p>
+                    </span>
+                  </a>
+                </li>
+                <li class="footer_list">
+                  <a href="#" class="learn_drop_list_icon">
+                    <span class="learn_drop_list_text"
+                      ><p>Mon. - Fri. 9:00 AM - 05:00 PM</p>
+                    </span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="learn_join_background">
+          <div class="container">
+            <div class="learn_join_padding">
+              <span class="learn_join_title"><h2>JOIN NRG</h2> </span>
+              <p class="learn_join_text">
+                Click on the button below and send your details to us.
+              </p>
+              <button type="button" class="learn_join_button">
+                JOIN NRG TODAY
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer class="footer">
       <div class="container">
         <ul class="footer_container">
