--- a/location.html
+++ b/location.html
@@ -16,6 +16,12 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="icon"
+      href="favicon/favicon-16x16.png"
+      type="favicon/png"
+      sizes="16x16"
+    />
     <link href="./css/global.css" rel="stylesheet" />
     <link href="./css/normalize.css" rel="stylesheet" />
     <link href="./css/header.css" rel="stylesheet" />
