--- a/index.html
+++ b/index.html
@@ -429,21 +429,21 @@
                     class="question_svg" /></span
               ></span>
               <ul class="question_content">
-                <li class="question_title_sentence">
+                <li class="question_title_sentence" math="q-1">
                   <a href="#"
                     ><span class="question_title_category"
                       ><p>ONBOARD TRAINING</p>
                       <img src="./icon/play.svg" alt="" /></span
                   ></a>
                 </li>
-                <li class="question_title_sentence">
+                <li class="question_title_sentence" math="q-2">
                   <a href="#"
                     ><span class="question_title_category"
                       ><p>MONTHLY TRAINING</p>
                       <img src="./icon/play.svg" alt="" /></span
                   ></a>
                 </li>
-                <li class="question_title_sentence">
+                <li class="question_title_sentence" math="q-3">
                   <a href="#"
                     ><span class="question_title_category"
                       ><p>CE CREDITS</p>
@@ -481,7 +481,7 @@
                   /></span>
                   <span class="resource_sentence_box_title"
                     ><p class="resource_sentence_title">30 Second Assessment</p>
-                    <p>
+                    <p class="resource_sentence_text">
                       Take this assessment so we can better understand your
                       goals.
                     </p>
@@ -499,7 +499,7 @@
                   /></span>
                   <span class="resource_sentence_box_title"
                     ><p class="resource_sentence_title">Changing Firms</p>
-                    <p>
+                    <p class="resource_sentence_text">
                       The National Realty Guild difference is due to our
                       dedication to your growth.
                     </p>
@@ -517,7 +517,7 @@
                   /></span>
                   <span class="resource_sentence_box_title"
                     ><p class="resource_sentence_title">Free Training Tips</p>
-                    <p>
+                    <p class="resource_sentence_text">
                       TIPS- Get free training and a sneak-peak of NRG-Universe.
                     </p>
                     <a class="resource_sentence_link" href="#"
@@ -753,15 +753,18 @@
         </div>
       </div>
     </footer>
-    <div class="container">
-      <a href="#below-arrow" class="below_flex">
-        <div class="below_box">
-          <span class="below_background"
-            ><img src="./icon/arrow.svg" alt="" class="below_img"
-          /></span>
-        </div>
-      </a>
+    <div class="scroll" data-scroll-reaction>
+      <div class="container">
+        <a href="#below-arrow" class="below_flex">
+          <div class="below_box">
+            <span class="below_background"
+              ><img src="./icon/arrow.svg" alt="" class="below_img"
+            /></span>
+          </div>
+        </a>
+      </div>
     </div>
     <script src="./js/toggleModal.js"></script>
+    <script src="./js/scrollEventListener.js"></script>
   </body>
 </html>
