--- a/start.html
+++ b/start.html
@@ -1288,15 +1288,18 @@
         </div>
       </div>
     </footer>
-    <div class="container">
-      <a href="#below-arrow" class="below_flex">
-        <div class="below_box">
-          <span class="below_background"
-            ><img src="./icon/arrow.svg" alt="" class="below_img"
-          /></span>
-        </div>
-      </a>
+    <div class="scroll" data-scroll-reaction>
+      <div class="container">
+        <a href="#below-arrow" class="below_flex">
+          <div class="below_box">
+            <span class="below_background"
+              ><img src="./icon/arrow.svg" alt="" class="below_img"
+            /></span>
+          </div>
+        </a>
+      </div>
     </div>
     <script src="./js/toggleModal.js"></script>
+    <script src="./js/scrollEventListener.js"></script>
   </body>
 </html>
