--- a/benefits.html
+++ b/benefits.html
@@ -174,9 +174,162 @@
         <div class="container">
           <div class="benefits_padding">
             <span class="benefits_title"
-              ><h2>GROW YOUR BUSINESS WITH</h2>
+              ><h2>
+                GROW YOUR BUSINESS WITH
+                <span class="benefits_title_supp">NRG</span>
+              </h2>
             </span>
-            <p class="benefits_supptitle">NRG</p>
+            <div class="benefits_slider_desktop">
+              <div class="slideshow-container">
+                <div class="mySlides fade">
+                  <div class="numbertext">1 / 5</div>
+                  <div class="resource_cicle_sentence_final">
+                    <span class="resource_cicle_sentence_box_img_final"
+                      ><p class="benefits_supptitle">NRG</p>
+                      <img
+                        class="resource_cicle_sentence_img_final"
+                        src="./icon/gold-check.svg"
+                        alt=""
+                    /></span>
+                    <span class="resource_cicle_sentence_box_title_final">
+                      <p class="resource_cicle_sentence_supptitle_final">
+                        Industry Experience
+                      </p>
+                      <p class="resource_cicle_sentence_text_final">
+                        <span class="resource_cicle_sentence_supptext_final"
+                          >"</span
+                        >
+                        We’ve been in business for over 15 years and have over
+                        150 dedicated agents on our team!
+                        <span class="resource_cicle_sentence_supptext_final"
+                          >"</span
+                        >
+                      </p></span
+                    >
+                  </div>
+                </div>
+
+                <div class="mySlides fade">
+                  <div class="numbertext">2 / 5</div>
+                  <div class="resource_cicle_sentence_final">
+                    <span class="resource_cicle_sentence_box_img_final"
+                      ><p class="benefits_supptitle">NRG</p>
+                      <img
+                        class="resource_cicle_sentence_img_final"
+                        src="./icon/gold-check.svg"
+                        alt=""
+                    /></span>
+                    <span class="resource_cicle_sentence_box_title_final">
+                      <p class="resource_cicle_sentence_supptitle_final">
+                        Excellent Team
+                      </p>
+                      <p class="resource_cicle_sentence_text_final">
+                        <span class="resource_cicle_sentence_supptext_final"
+                          >"</span
+                        >
+                        With over 150 agents, full administrative support, and
+                        easy broker access!
+                        <span class="resource_cicle_sentence_supptext_final"
+                          >"</span
+                        >
+                      </p></span
+                    >
+                  </div>
+                </div>
+
+                <div class="mySlides fade">
+                  <div class="numbertext">3 / 5</div>
+                  <div class="resource_cicle_sentence_final">
+                    <span class="resource_cicle_sentence_box_img_final"
+                      ><p class="benefits_supptitle">NRG</p>
+                      <img
+                        class="resource_cicle_sentence_img_final"
+                        src="./icon/gold-check.svg"
+                        alt=""
+                    /></span>
+                    <span class="resource_cicle_sentence_box_title_final">
+                      <p class="resource_cicle_sentence_supptitle_final">
+                        100% Commission Program
+                      </p>
+                      <p class="resource_cicle_sentence_text_final">
+                        <span class="resource_cicle_sentence_supptext_final"
+                          >"</span
+                        >
+                        Keep 100% of your commission on every transaction!
+                        <span class="resource_cicle_sentence_supptext_final"
+                          >"</span
+                        >
+                      </p></span
+                    >
+                  </div>
+                </div>
+
+                <div class="mySlides fade">
+                  <div class="numbertext">4 / 5</div>
+                  <div class="resource_cicle_sentence_final">
+                    <span class="resource_cicle_sentence_box_img_final"
+                      ><p class="benefits_supptitle">NRG</p>
+                      <img
+                        class="resource_cicle_sentence_img_final"
+                        src="./icon/gold-check.svg"
+                        alt=""
+                    /></span>
+                    <span class="resource_cicle_sentence_box_title_final">
+                      <p class="resource_cicle_sentence_supptitle_final">
+                        Advanced Technology
+                      </p>
+                      <p class="resource_cicle_sentence_text_final">
+                        <span class="resource_cicle_sentence_supptext_final"
+                          >"</span
+                        >
+                        Grow your business with some of the most powerful tools
+                        available to our industry!
+                        <span class="resource_cicle_sentence_supptext_final"
+                          >"</span
+                        >
+                      </p></span
+                    >
+                  </div>
+                </div>
+
+                <div class="mySlides fade">
+                  <div class="numbertext">5 / 5</div>
+                  <div class="resource_cicle_sentence_final">
+                    <span class="resource_cicle_sentence_box_img_final"
+                      ><p class="benefits_supptitle">NRG</p>
+                      <img
+                        class="resource_cicle_sentence_img_final"
+                        src="./icon/gold-check.svg"
+                        alt=""
+                    /></span>
+                    <span class="resource_cicle_sentence_box_title_final">
+                      <p class="resource_cicle_sentence_supptitle_final">
+                        NRG Guarantee
+                      </p>
+                      <p class="resource_cicle_sentence_text_final">
+                        <span class="resource_cicle_sentence_supptext_final"
+                          >"</span
+                        >
+                        We guarantee an increase in production that will be
+                        directly accredited to our tools, systems, and
+                        techniques.
+                        <span class="resource_cicle_sentence_supptext_final"
+                          >"</span
+                        >
+                      </p></span
+                    >
+                  </div>
+                </div>
+              </div>
+              <br />
+              <div style="text-align: center; margin: 0 0 40px 0">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+              </div>
+            </div>
             <ul class="benefits_button_box">
               <li class="benefits_sentence">
                 <button type="button" class="benefits_button">
@@ -197,7 +350,7 @@
                 </button>
               </li>
             </ul>
-            <ul>
+            <ul class="benefits_advantage_mobile">
               <li class="benefits_advantage">
                 <span class="benefits_advantage_icon"
                   ><img
@@ -307,20 +460,22 @@
         <div class="present_background">
           <div class="container">
             <div class="present_padding">
-              <span class="present_img">
-                <img
-                  src="./img/National-Realty-Guild-IG-01-01-300x500.jpg"
-                  alt=""
-              /></span>
-              <div>
-                <iframe
-                  class="present_video"
-                  src="https://www.youtube.com/embed/Hwkm5Dx1gUs"
-                  title="National Realty Guild Agent Benefits"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                  allowfullscreen
-                ></iframe>
+              <div class="present_desktop">
+                <span class="present_img">
+                  <img
+                    src="./img/National-Realty-Guild-IG-01-01-300x500.jpg"
+                    alt=""
+                /></span>
+                <div class="present_video_desktop">
+                  <iframe
+                    class="video"
+                    src="https://www.youtube.com/embed/Hwkm5Dx1gUs?autoplay=1"
+                    title="National Realty Guild Agent Benefits"
+                    frameborder="0"
+                    allow="accelerometer; autoplay *; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
+                </div>
               </div>
             </div>
           </div>
@@ -811,15 +966,19 @@
         </div>
       </div>
     </footer>
-    <div class="container">
-      <a href="#below-arrow" class="below_flex">
-        <div class="below_box">
-          <span class="below_background"
-            ><img src="./icon/arrow.svg" alt="" class="below_img"
-          /></span>
-        </div>
-      </a>
+    <div class="scroll" data-scroll-reaction>
+      <div class="container">
+        <a href="#below-arrow" class="below_flex">
+          <div class="below_box">
+            <span class="below_background"
+              ><img src="./icon/arrow.svg" alt="" class="below_img"
+            /></span>
+          </div>
+        </a>
+      </div>
     </div>
     <script src="./js/toggleModal.js"></script>
+    <script src="./js/scrollEventListener.js"></script>
+    <script src="./js/benefitsSlider.js"></script>
   </body>
 </html>
