--- a/benefits.html
+++ b/benefits.html
@@ -27,7 +27,10 @@
     <link href="./css/header.css" rel="stylesheet" />
     <link href="./css/footer.css" rel="stylesheet" />
     <link href="./css/benefits.css" rel="stylesheet" />
-    <title>National Reality Guild</title>
+    <title>
+      Realty Benefits - See How 100% Commission Payouts Make NRG The Best |
+      National Realty Guild
+    </title>
   </head>
   <body class="body" data-body-hidden>
     <div class="modal" data-modal-menu>
