--- a/location.html
+++ b/location.html
@@ -27,7 +27,10 @@
     <link href="./css/header.css" rel="stylesheet" />
     <link href="./css/footer.css" rel="stylesheet" />
     <link href="./css/location.css" rel="stylesheet" />
-    <title>National Reality Guild</title>
+    <title>
+      Nrg Locations - View Our Realty Office Locations Around Minnesota |
+      National Realty Guild
+    </title>
   </head>
   <body class="body" data-body-hidden>
     <div class="modal" data-modal-menu>
@@ -244,14 +247,18 @@
           <div class="office_padding">
             <ul>
               <li>
-                <span class="office_title"
-                  ><h3>Union Plaza OffiCenter</h3>
-                </span>
-                <p class="office_supptitle">
-                  333 Washington Avenue N, Suite 300<br />
-                  Minneapolis, MN 55401
-                </p>
-                <span class="office_img"><img src="" alt="" /></span>
+                <div class="office_desktop">
+                  <div class="office_desktop_title">
+                    <span class="office_title"
+                      ><h3>Union Plaza OffiCenter</h3>
+                    </span>
+                    <p class="office_supptitle">
+                      333 Washington Avenue N, Suite 300<br />
+                      Minneapolis, MN 55401
+                    </p>
+                  </div>
+                  <span class="office_img"><img src="" alt="" /></span>
+                </div>
                 <span class="about_supptitle"
                   ><span>AMENITIES</span
                   ><span
@@ -342,6 +349,7 @@
                 </p>
                 <span class="office_video"
                   ><iframe
+                    class="video"
                     src="https://www.youtube.com/embed/nylwtAxcF1g"
                     title="Edina OffiCenter 60 Second Tour!"
                     frameborder="0"
@@ -410,6 +418,7 @@
                 </p>
                 <span class="office_video"
                   ><iframe
+                    class="video"
                     src="https://www.youtube.com/embed/AUkAJ8d05Bc"
                     title="Woodbury OffiCenter 60 Second Tour"
                     frameborder="0"
