--- a/sales.html
+++ b/sales.html
@@ -27,7 +27,10 @@
     <link href="./css/header.css" rel="stylesheet" />
     <link href="./css/footer.css" rel="stylesheet" />
     <link href="./css/sales.css" rel="stylesheet" />
-    <title>National Reality Guild</title>
+    <title>
+      Lead Generation - Benefit From Our Minneapolis Realty Group'S Technology |
+      National Realty Guild
+    </title>
   </head>
   <body class="body" data-body-hidden>
     <div class="modal" data-modal-menu>
