--- a/support.html
+++ b/support.html
@@ -22,11 +22,11 @@
       type="favicon/png"
       sizes="16x16"
     />
-    <link href="./css/global.css" rel="stylesheet" />
-    <link href="./css/normalize.css" rel="stylesheet" />
-    <link href="./css/header.css" rel="stylesheet" />
-    <link href="./css/footer.css" rel="stylesheet" />
-    <link href="./css/support.css" rel="stylesheet" />
+    <link href="./dist/style/global.min.css" rel="stylesheet" />
+    <link href="./dist/style/normalize.min.css" rel="stylesheet" />
+    <link href="./dist/style/header.min.css" rel="stylesheet" />
+    <link href="./dist/style/footer.min.css" rel="stylesheet" />
+    <link href="./dist/style/support.min.css" rel="stylesheet" />
     <title>
       Realty Support - See The Support Our Realtors Provide In Minneapolis |
       National Realty Guild
@@ -892,7 +892,7 @@
         </a>
       </div>
     </div>
-    <script src="./js/toggleModal.js"></script>
-    <script src="./js/scrollEventListener.js"></script>
+    <script src="./dist/js/toggleModal.min.js"></script>
+    <script src="./dist/js/scrollEventListener.min.js"></script>
   </body>
 </html>
