--- a/sales.html
+++ b/sales.html
@@ -22,11 +22,11 @@
       type="favicon/png"
       sizes="16x16"
     />
-    <link href="./css/global.css" rel="stylesheet" />
-    <link href="./css/normalize.css" rel="stylesheet" />
-    <link href="./css/header.css" rel="stylesheet" />
-    <link href="./css/footer.css" rel="stylesheet" />
-    <link href="./css/sales.css" rel="stylesheet" />
+    <link href="./dist/style/global.min.css" rel="stylesheet" />
+    <link href="./dist/style/normalize.min.css" rel="stylesheet" />
+    <link href="./dist/style/header.min.css" rel="stylesheet" />
+    <link href="./dist/style/footer.min.css" rel="stylesheet" />
+    <link href="./dist/style/sales.min.css" rel="stylesheet" />
     <title>
       Lead Generation - Benefit From Our Minneapolis Realty Group'S Technology |
       National Realty Guild
@@ -977,7 +977,7 @@
         </a>
       </div>
     </div>
-    <script src="./js/toggleModal.js"></script>
-    <script src="./js/scrollEventListener.js"></script>
+    <script src="./dist/js/toggleModal.min.js"></script>
+    <script src="./dist/js/scrollEventListener.min.js"></script>
   </body>
 </html>
