--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
               </div>
               <div class="video_desktop">
                 <iframe
+                  style="border-radius: 4px"
                   class="video hero_video"
                   src="https://www.youtube.com/embed/_7wV9CNt8pk?autoplay=1"
                   title="Join National Realty Guild 100% video"
@@ -238,16 +239,16 @@
         <div class="container">
           <div class="about_padding">
             <ul class="about_content">
-              <li class="about_sentence">
+              <li class="about_sentence" style="border-radius: 4px">
                 <a href="#"><p class="about_title">ABOUT NRG</p></a>
               </li>
-              <li class="about_sentence">
+              <li class="about_sentence" style="border-radius: 4px">
                 <a href="#"><p class="about_title">BENEFITS</p></a>
               </li>
-              <li class="about_sentence">
+              <li class="about_sentence" style="border-radius: 4px">
                 <a href="#"><p class="about_title">SUPPORTS</p></a>
               </li>
-              <li class="about_sentence">
+              <li class="about_sentence" style="border-radius: 4px">
                 <a href="#"><p class="about_title">JOIN TODAY</p></a>
               </li>
             </ul>
@@ -431,21 +432,27 @@
               <ul class="question_content">
                 <li class="question_title_sentence" math="q-1">
                   <a href="#"
-                    ><span class="question_title_category"
+                    ><span
+                      class="question_title_category"
+                      style="border-radius: 4px"
                       ><p>ONBOARD TRAINING</p>
                       <img src="./icon/play.svg" alt="" /></span
                   ></a>
                 </li>
                 <li class="question_title_sentence" math="q-2">
                   <a href="#"
-                    ><span class="question_title_category"
+                    ><span
+                      class="question_title_category"
+                      style="border-radius: 4px"
                       ><p>MONTHLY TRAINING</p>
                       <img src="./icon/play.svg" alt="" /></span
                   ></a>
                 </li>
                 <li class="question_title_sentence" math="q-3">
                   <a href="#"
-                    ><span class="question_title_category"
+                    ><span
+                      class="question_title_category"
+                      style="border-radius: 4px"
                       ><p>CE CREDITS</p>
                       <img src="./icon/play.svg" alt="" /></span
                   ></a>
