--- a/learn.html
+++ b/learn.html
@@ -332,7 +332,7 @@
                   </form>
                 </li>
                 <li class="resource_sentence">
-                  <div class="form_box" style="height: 550px">
+                  <div class="form_box" style="height: 630px">
                     <h3 class="technology_title">JOIN NRG</h3>
                     <p class="resource_cicle_sentence_text_final">
                       <span class="resource_cicle_sentence_supptext_final"
@@ -357,13 +357,7 @@
                             <p class="resource_cicle_sentence_supptitle_final">
                               Industry Experience
                             </p>
-                            <p
-                              class="resource_cicle_sentence_text_final"
-                              style="
-                                color: rgb(255 255 255 / 70%);
-                                height: 50px;
-                              "
-                            >
+                            <p class="resource_cicle_sentence_text_join">
                               We’ve been in business for over 15 years and have
                               over 150 dedicated agents on our team!
                             </p></span
@@ -384,13 +378,7 @@
                             <p class="resource_cicle_sentence_supptitle_final">
                               Excellent Team
                             </p>
-                            <p
-                              class="resource_cicle_sentence_text_final"
-                              style="
-                                color: rgb(255 255 255 / 70%);
-                                height: 50px;
-                              "
-                            >
+                            <p class="resource_cicle_sentence_text_join">
                               With over 150 agents, full administrative support,
                               and easy broker access!
                             </p></span
@@ -411,13 +399,7 @@
                             <p class="resource_cicle_sentence_supptitle_final">
                               100% Commission Program
                             </p>
-                            <p
-                              class="resource_cicle_sentence_text_final"
-                              style="
-                                color: rgb(255 255 255 / 70%);
-                                height: 50px;
-                              "
-                            >
+                            <p class="resource_cicle_sentence_text_join">
                               Keep 100% of your commission on every transaction!
                             </p></span
                           >
@@ -437,13 +419,7 @@
                             <p class="resource_cicle_sentence_supptitle_final">
                               Advanced Technology
                             </p>
-                            <p
-                              class="resource_cicle_sentence_text_final"
-                              style="
-                                color: rgb(255 255 255 / 70%);
-                                height: 50px;
-                              "
-                            >
+                            <p class="resource_cicle_sentence_text_join">
                               Grow your business with some of the most powerful
                               tools available to our industry!
                             </p></span
@@ -464,13 +440,7 @@
                             <p class="resource_cicle_sentence_supptitle_final">
                               NRG Guarantee
                             </p>
-                            <p
-                              class="resource_cicle_sentence_text_final"
-                              style="
-                                color: rgb(255 255 255 / 70%);
-                                height: 50px;
-                              "
-                            >
+                            <p class="resource_cicle_sentence_text_join">
                               We guarantee an increase in production that will
                               be directly accredited to our tools, systems, and
                               techniques.
@@ -893,6 +863,6 @@
     </div>
     <script src="./dist/js/toggleModal.min.js"></script>
     <script src="./dist/js/scrollEventListener.min.js"></script>
-    <script src="./dist/js/benefitsSlider.min.js"></script>
+    <script src="./dist/js/learnSlider.min.js"></script>
   </body>
 </html>
